feat: get short url tracking analytics
